<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <import type="android.text.Html"/>
        <import type="android.app.Activity" />
        <variable
            name="mdl"
            type="com.example.playstation.model.PlayStationDetailsModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textColor"
            android:fitsSystemWindows="true"
            tools:context=".ui.activity.ActDetails">

            <!-- ===== Toolbar Layout ===== -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_horizontal_margin"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?actionBarItemBackground"
                    android:padding="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_back_white"
                    app:layout_constraintStart_toStartOf="parent"
                    android:onClick='@{() -> ((Activity) context).onBackPressed()}'
                    />

                <!-- ===== Location Layout ===== -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/location_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ivBack"
                    app:layout_constraintTop_toTopOf="@id/ivBack"
                    app:layout_constraintBottom_toBottomOf="@+id/ivBack"
                    android:layout_marginLeft="@dimen/_40sdp">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:fontFamily="@font/app_font_semi_bold"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:text='@{mdl.name}'
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.card.MaterialCardView
                style="@style/cardViewStyleMyAccount"
                android:layout_marginTop="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nestedScrollview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:visibility="gone">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/default_horizontal_card_padding">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/ivImage"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_100sdp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_placeholder"
                            app:riv_corner_radius="12dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>




                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/rlMyReviews"
                            style="@style/AppParentMyAccount"
                            app:layout_constraintTop_toBottomOf="@+id/ivImage"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="@dimen/_10sdp">
                            <!--android:text='@{mdl.description != null ? Html.fromHtml(mdl.description) : ""}'-->

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvDesc"
                                style="@style/AppTextMyAccount"
                                android:text=''
                                android:textAlignment="viewStart"
                                android:textColor="@color/dark_grey"
                                android:textSize="10dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="MissingConstraints" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <View
                            android:id="@+id/vReviews"
                            style="@style/AppTextSeperator"
                            android:layout_marginTop="@dimen/_5sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rlMyReviews" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/rlmatacritic"
                            style="@style/AppParentMyAccount"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/vReviews"
                            android:layout_marginTop="@dimen/_5sdp">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvMatacraticTitle"
                                android:text="@string/metacritic"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                style="@style/AppTextMyAccount"
                                android:textSize="10dp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvMatacratic"
                                style="@style/AppTextMyAccount"
                                android:text='@{mdl.metacritic.toString()}'
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvMatacraticTitle"
                                android:textColor="@color/dark_grey"
                                android:textSize="10dp"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                       <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/rlwebsite"
                            style="@style/AppParentMyAccount"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rlmatacritic"
                            android:layout_marginTop="@dimen/_5sdp">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvWebsitetitle"
                                android:text="@string/website"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                style="@style/AppTextMyAccount"
                                android:textSize="10dp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvWbsite"
                                style="@style/AppTextMyAccount"
                                android:text='@{mdl.website}'
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvWebsitetitle"
                                android:textColor="@color/dark_grey"
                                android:textSize="10dp"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/rlPlayTime"
                            style="@style/AppParentMyAccount"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rlwebsite"
                            android:layout_marginTop="@dimen/_5sdp">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvPlaytimetitle"
                                android:text="@string/playtime"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                style="@style/AppTextMyAccount"
                                android:textSize="10dp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvPlayTime"
                                style="@style/AppTextMyAccount"
                                android:text='@{mdl.playtime.toString()}'
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvPlaytimetitle"
                                android:textColor="@color/dark_grey"
                                android:textSize="10dp"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/rlAchievement"
                            style="@style/AppParentMyAccount"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rlPlayTime"
                            android:layout_marginTop="@dimen/_5sdp">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvAchievementtitle"
                                android:text="@string/achievement"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                style="@style/AppTextMyAccount"
                                android:textSize="10dp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvAchievement"
                                style="@style/AppTextMyAccount"
                                android:text='@{mdl.achievement_count.toString()}'
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvAchievementtitle"
                                android:textColor="@color/dark_grey"
                                android:textSize="10dp"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/rlGenere"
                            style="@style/AppParentMyAccount"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rlAchievement"
                            android:layout_marginTop="@dimen/_5sdp">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvGeneretitle"
                                android:text="@string/generes"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                style="@style/AppTextMyAccount"
                                android:textSize="10dp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvGenere"
                                style="@style/AppTextMyAccount"
                                android:text=''
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvGeneretitle"
                                android:textColor="@color/dark_grey"
                                android:textSize="10dp"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.core.widget.NestedScrollView>


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>